syntax = "proto3";

option csharp_namespace = "dev.zico.protobuf";
package dev.zico.protobuf;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
